Add devdocs Django section to review

--- a/dev/questions/wtf_0003.md
+++ b/dev/questions/wtf_0003.md
@@ -149,3 +149,5 @@ done working on said user story, coming back to it once I've completed the story
 34. Add a user story for integrating a production web server into Django.
 
 35. What's the deal with [Django settings](https://docs.djangoproject.com/en/3.1/topics/settings/)?
+
+36. Read through https://devdocs.io/django~3.1/
